@@ -1,17 +1,15 @@
 package priv.zhou.tools;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 
 public class Base64Util {
-
 
     /**
      * BASE64解密
      */
     public static byte[] decode(String key) throws Exception {
-        return null == key ? null : new BASE64Decoder().decodeBuffer(key);
+        return null == key ? null : Base64.getDecoder().decode(key);
     }
 
 
@@ -19,6 +17,6 @@ public class Base64Util {
      * BASE64加密
      */
     public static String encode(byte[] key) {
-        return null == key ? null : new BASE64Encoder().encodeBuffer(key);
+        return null == key ? null : Base64.getEncoder().encodeToString(key);
     }
 }
